MCH prescription print alignment issues

--- a/css/print.css
+++ b/css/print.css
@@ -723,7 +723,7 @@
 @page
 {
     size: auto;
-    margin:150px 50px 150px 50px;
+    margin:180px 50px 150px 50px;
 }
 .other_document_summary colgroup {
     display: none;
